Fix justify content of tile-container, not center to fix overflow problem

--- a/src/components/departureTiles/styles.scss
+++ b/src/components/departureTiles/styles.scss
@@ -17,7 +17,6 @@
 .tile-container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     background-color: #272727;
     color: white;
     width: 15%;
